--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeWeb">
         <activity
-            android:name=".view.DetailActivity"
-            android:exported="true" >
+            android:name=".screens.details.DetailActivity"
+            android:exported="false" >
 
+        </activity>
+
+        <activity
+            android:name=".screens.home.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
